fix: Jumps from the `toc` are unstable 🐥

--- a/scss/general.scss
+++ b/scss/general.scss
@@ -222,9 +222,6 @@ article {
 
   scroll-margin-top: var.$menu-bar-height;
 
-  content-visibility: auto;
-  contain-intrinsic-size: 960px;
-
   code {
     &:not(pre code) {
       font-size: 0.82em;
